--- a/spokes/say/spec/test_runner.html
+++ b/spokes/say/spec/test_runner.html
@@ -2,7 +2,7 @@
   <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
-		<title>Templator</title>
+		<title>Say.js Specification</title>
 		
 		<!-- load say dependencies -->
 		<script src="/say/lib/Socket.IO/socket.io.js" type="text/javascript"></script>
