moved views and templates into seperate files

--- a/spokes/email.html
+++ b/spokes/email.html
@@ -20,11 +20,11 @@
 		<script src="/say/say.js" type="text/javascript"></script>
 
 		<!-- loat email-demo -->
-		<link  href="/spokes/email-demo/styles.css" rel="stylesheet" type="text/css"/>													
-    <script type="text/javascript" src="/spokes/email-demo/boot.js"></script>
-    <script type="text/javascript" src="/spokes/email-demo/views.js"></script>
-    <script type="text/javascript" src="/spokes/email-demo/models.js"></script>		
-    <script type="text/javascript" src="/spokes/email-demo/controllers.js"></script>
+		<link  href="/spokes/email-demo/styles.css" rel="stylesheet" type="text/css"/>						
+    <script src="/spokes/email-demo/boot.js" 			  type="text/javascript"></script>
+    <script src="/spokes/email-demo/views.js"			  type="text/javascript"></script>
+    <script src="/spokes/email-demo/models.js"		  type="text/javascript"></script>		
+    <script src="/spokes/email-demo/controllers.js"  type="text/javascript"> </script>
   </head>
   <body style="padding: 0, margin: 0">
 
@@ -33,7 +33,6 @@
 	
 		<tr id="header-container" height="24">
 			<td id="header" colspan="2">
-
 <!--				
 				<div id="db-status-ready-container" class="db-status-container">
 					<div id="db-status-ready" class="db-status">
