styling for spokes integration

--- a/spokes/chat.html
+++ b/spokes/chat.html
@@ -35,14 +35,13 @@
 
 	</head>
 	<body>
-		<div id="chatroom">
-			<h1>chaticalDESIGNS</h1>
-			<div id="chat-window">
-			</div>
+		<div id="chatroom" class="chatroom">
 			<div id="chat-user-list-box">
-				<h3>Peeps</h3>
+				<h3>Online Now</h3>
 				<div id="chat-user-list-window">
 				</div>			
+			</div>			
+			<div id="chat-window">
 			</div>
 			<div id="chat-controls-window">
 			</div>
