--- a/spokes/email.html
+++ b/spokes/email.html
@@ -5,7 +5,7 @@
 		<title>Templator</title>
 
 			<!-- load say dependencies -->
-<!--		<script src="/say/lib/Socket.IO/socket.io.js" type="text/javascript"></script>-->
+<script src="/say/lib/Socket.IO/socket.io.js" type="text/javascript"></script>
 		<script src="/say/lib/jquery.js"	type="text/javascript"></script>
 		<link  href="/say/lib/jquery-ui/jquery-ui.css" rel="stylesheet" type="text/css"/>
 		<script src="/say/lib/jquery-ui/jquery-ui.js"	type="text/javascript"></script>
@@ -25,6 +25,23 @@
     <script src="/spokes/email-demo/views.js"			  type="text/javascript"></script>
     <script src="/spokes/email-demo/models.js"		  type="text/javascript"></script>		
     <script src="/spokes/email-demo/controllers.js"  type="text/javascript"> </script>
+
+		<!-- loat chatroom -->
+		<link  href="/spokes/chat/styles.css" type="text/css" rel="stylesheet" />
+		<script src="/spokes/chat/boot.js" type="text/javascript"></script>
+		<script src="/spokes/chat/assets.js" type="text/javascript"></script>
+		<script src="/spokes/chat/templates/chat_controls.js" type="text/javascript"></script>
+		<script src="/spokes/chat/templates/chat_message.js" type="text/javascript"></script>
+		<script src="/spokes/chat/templates/chat_options.js" type="text/javascript"></script>
+		<script src="/spokes/chat/templates/login_window.js" type="text/javascript"></script>
+		<script src="/spokes/chat/templates/user_list_item.js" type="text/javascript"></script>
+		<script src="/spokes/chat/views/chat_controls.js" type="text/javascript"></script>
+		<script src="/spokes/chat/views/chat_message.js" type="text/javascript"></script>
+		<script src="/spokes/chat/views/chat_options.js" type="text/javascript"></script>
+		<script src="/spokes/chat/views/login_window.js" type="text/javascript"></script>
+		<script src="/spokes/chat/views/user_list_item.js" type="text/javascript"></script>
+		<script src="/spokes/chat/models.js" type="text/javascript"></script>
+		<script src="/spokes/chat/controllers.js" type="text/javascript"></script>	    
   </head>
   <body style="padding: 0, margin: 0">
 
@@ -158,5 +175,16 @@
 			</tr>
 			
 		</table>
+		<div id="chatroom" class="chatroom" style="display:none;">
+			<div id="chat-user-list-box">
+				<h3>Online Now</h3>
+				<div id="chat-user-list-window">
+				</div>			
+			</div>			
+			<div id="chat-window">
+			</div>
+			<div id="chat-controls-window">
+			</div>
+		</div>		
 	</body>
 </html>
